dan fixes for targil3